--- a/.github/workflows/fastlane.yml
+++ b/.github/workflows/fastlane.yml
@@ -30,9 +30,10 @@ jobs:
       # - uses: maxim-lobanov/setup-xcode@v1
         with: 
           xcode-version: '13.0'
-      # - uses: ruby/setup-ruby@v1
-      #   with:
-      #     ruby-version: '2.7.2'
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '2.7.2'
       - uses: maierj/fastlane-action@v2.2.0
         with:
-          lane: 'tests'
+          lane: 'tests',
+          bundle-install-path: 'vendor/bundle'
