--- a/.github/workflows/fastlane.yml
+++ b/.github/workflows/fastlane.yml
@@ -18,7 +18,7 @@ on:
 jobs:
   test:
     name: Fastlane
-    runs-on: macos-latest
+    runs-on: macos-12
     # macOS-latest
     steps:
       - name: Checkout repository
