--- a/.github/workflows/fastlane.yml
+++ b/.github/workflows/fastlane.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Fastlane
+name: Fastlane1
 
 # Controls when the workflow will run
 on:
@@ -17,7 +17,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   test:
-    name: Fastlane
+    name: Fastlane2
     runs-on: macos-12
     # macOS-latest
     steps:
