--- a/.github/workflows/fastlane.yml
+++ b/.github/workflows/fastlane.yml
@@ -9,7 +9,7 @@ on:
   #  - development
   #  types: [opened, synchronize, reopened]
   push:
-   branches: ['SET-LATTER']
+   branches: []
     
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
